--- a/envelope.html
+++ b/envelope.html
@@ -8,12 +8,12 @@
 
 	<link href='envelope.css' rel='stylesheet' type='text/css'>
 
-	<script type="text/javascript" src="jscolor/jscolor.js"></script>
+	<script type="text/javascript" src="3rd_party/jscolor/jscolor.js"></script>
 
 	<script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script language="javascript" type="text/javascript" src="jspdf.min.js"></script>
-	<script language="javascript" type="text/javascript" src="hex-to-rgb.js-master/hex-to-rgb.min.js"></script> 
-	<script src="masonry-master/dist/masonry.pkgd.min.js"></script>
+	<script language="javascript" type="text/javascript" src="3rd_party/jspdf.min.js"></script>
+	<script language="javascript" type="text/javascript" src="3rd_party/hex-to-rgb.js-master/hex-to-rgb.min.js"></script> 
+	<script src="3rd_party/masonry-master/dist/masonry.pkgd.min.js"></script>
 	<script language="javascript" type="text/javascript" src="envelope.js"></script>
 
 </head>
@@ -55,40 +55,40 @@
 	
 		<div class="item two">
 			<div class="faq">
-				<svg width="100%" height="55%">
-					<rect style="stroke: #000000; fill:none; stroke-width:1px" x="3.0625in" y="2.375in" height="4.375in" width="5.75in"/>
+				<svg width="100%" height="500px">
+					<rect style="stroke: #000000; fill:none; stroke-width:4px" x="3.0625in" y="2.375in" height="4.375in" width="5.75in"/>
 
 					<!-- edges of the side flaps that meet outside guidebox (left and right flaps only) -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="0in" y1="4.84375in" x2="0in" y2="4.28125in"/>
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="11.875in" y1="4.84375in" x2="11.875in" y2="4.28125in"/>
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="0in" y1="4.84375in" x2="0in" y2="4.28125in"/>
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="11.875in" y1="4.84375in" x2="11.875in" y2="4.28125in"/>
 
 					<!-- lines from face corner to first angle (top and bottom flaps) -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="3.0625in" y1="2.375in" x2="3.21875in" y2="1.9375in"/> <!-- top left -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="8.8125in" y1="2.375in" x2="8.65625in" y2="1.9375in"/> <!-- top right -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="3.0625in" y1="2.375in" x2="3.21875in" y2="1.9375in"/> <!-- top left -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="8.8125in" y1="2.375in" x2="8.65625in" y2="1.9375in"/> <!-- top right -->
 
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="3.0625in" y1="6.75in" x2="3.21875in" y2="7.1875in"/> <!-- bottom left -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="8.8125in" y1="6.75in" x2="8.65625in" y2="7.1875in"/> <!-- bottom right -->
-
-					<!-- lines from face corner to first angle (side flaps) -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="3.0625in" y1="2.375in" x2="2.5in" y2="2.5in"/> <!-- top left -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="3.0625in" y1="6.75in" x2="2.5in" y2="6.625in"/> <!-- bottom left -->
-
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="8.8125in" y1="2.375in" x2="9.375in" y2="2.5in"/> <!-- top right -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="8.8125in" y1="6.75in" x2="9.375in" y2="6.625in"/> <!-- bottom right -->
-
-					<!-- lines from small angle to ed stroke-width:1pxge (top and bottom flaps) -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="3.21875in" y1="1.9375in" x2="5.9375in" y2="0in"/> <!-- top left -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="8.65625in" y1="1.9375in" x2="5.9375in" y2="0in"/> <!-- top right -->
-
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="3.21875in" y1="7.1875in" x2="5.9375in" y2="9.375in"/> <!-- bottom left -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="8.65625in" y1="7.1875in" x2="5.9375in" y2="9.375in"/> <!-- bottom right -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="3.0625in" y1="6.75in" x2="3.21875in" y2="7.1875in"/> <!-- bottom left -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="8.8125in" y1="6.75in" x2="8.65625in" y2="7.1875in"/> <!-- bottom right -->
 
 					<!-- lines from face corner to first angle (side flaps) -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="2.5in" y1="2.5in" x2="0in" y2="4.28125in"/> <!-- top left -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="2.5in" y1="6.625in" x2="0in" y2="4.84375in"/> <!-- bottom left -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="3.0625in" y1="2.375in" x2="2.5in" y2="2.5in"/> <!-- top left -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="3.0625in" y1="6.75in" x2="2.5in" y2="6.625in"/> <!-- bottom left -->
 
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="9.375in" y1="2.5in" x2="11.875in" y2="4.28125in"/> <!-- top right -->
-					<line style="stroke:#000000; stroke-width:2px" stroke-width:1 x1="9.375in" y1="6.625in" x2="11.875in" y2="4.84375in"/> <!-- bottom right -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="8.8125in" y1="2.375in" x2="9.375in" y2="2.5in"/> <!-- top right -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="8.8125in" y1="6.75in" x2="9.375in" y2="6.625in"/> <!-- bottom right -->
+
+					<!-- lines from small angle to ed stroke-width:1page (top and bottom flaps) -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="3.21875in" y1="1.9375in" x2="5.9375in" y2="0in"/> <!-- top left -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="8.65625in" y1="1.9375in" x2="5.9375in" y2="0in"/> <!-- top right -->
+
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="3.21875in" y1="7.1875in" x2="5.9375in" y2="9.375in"/> <!-- bottom left -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="8.65625in" y1="7.1875in" x2="5.9375in" y2="9.375in"/> <!-- bottom right -->
+
+					<!-- lines from face corner to first angle (side flaps) -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="2.5in" y1="2.5in" x2="0in" y2="4.28125in"/> <!-- top left -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="2.5in" y1="6.625in" x2="0in" y2="4.84375in"/> <!-- bottom left -->
+
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="9.375in" y1="2.5in" x2="11.875in" y2="4.28125in"/> <!-- top right -->
+					<line style="stroke:#000000; stroke-width:4px" stroke-width:1 x1="9.375in" y1="6.625in" x2="11.875in" y2="4.84375in"/> <!-- bottom right -->
 
 				</svg>
 				<p>This is what the template design looks like...</p>
@@ -98,11 +98,11 @@
 
 		<div class="item three">
 			<div class="faq">
-				<p>This template generator creates a custom envelope template. The way to use the template is up to you - the simplest way is to print on plain paper, cut, fold, and mail away. You can also print on patterned or scrapbook paper or open the file in software such as Photoshop or Word to add graphics and an address. Check out some of these creative examples <a href="https://www.pinterest.com/search/pins/?q=envelope%20art&term_meta%5B%5D=envelope%7Ctyped&term_meta%5B%5D=art%7Ctyped" target="blank_">here.</a></p>
+				<p>This template generator creates a custom envelope template. The way to use the template is up to you - the simplest way is to print on plain paper, cut, fold, and mail away. You can also print on patterned or scrapbook paper or open the file in software such as Photoshop to add graphics and/or a mailing address. Check out some of these creative examples <a href="https://www.pinterest.com/search/pins/?q=envelope%20art&term_meta%5B%5D=envelope%7Ctyped&term_meta%5B%5D=art%7Ctyped" target="blank_">here.</a></p>
 				<p>The biggest size for this design that will print on one page of legal paper (8.5" x 11") is 3.9" tall and 5.3" wide. That's going to be the envelope face size, not its dimensions from wing to wing.</p>
-				<p>As much as I would love to control your printer settings, you will need to turn off scaling and/or fit-to-page options yourself before printing. You can see what I mean <a href="https://www.katefilippova.com/projects/envelope/envelopeScreenShot.png" target="blank_">here.</a></p>
-				<p>Why did I make this? I love writing letters and making cards. They don't always fit nicely into envelopes I have laying around and I'm not good at freehand drawing templates every time. Custom sizes for everyone!</p>
-				<p>How can you make your own template? I put the code for this project on <a href="www.github.com" target="_blank" class="page_links">Github.</a></p>
+				<p>As much as I would love to control your printer settings, you will need to turn off scaling and/or fit-to-page options yourself before printing. You can see what I mean <a href="http://katefilippova.com/projects/envelope/envelopeScreenShot.png" target="blank_">here.</a></p>
+				<p>Why did I make this? I love writing letters and making cards. They don't always fit nicely into envelopes I have laying around and I'm not good at freehand drawing templates every time.</p>
+				<p>How can you make your own template? I put the code for this project on <a href="https://github.com/fakenamethecat/Envelope-Generator" target="_blank" class="page_links">Github.</a></p>
 				<p>Questions? Feel free to a <a href="mailto:yekaterina.filippova@gmail.com" target="_blank" class="page_links">e-mail me.</a></p>
 
 			</div>
